# hawkbot-gateway

./: Cargo.toml  README.md  config.json
deploy/: scoreboard-gateway.service
scripts/: pi-bootstrap.sh
src/: config.json  config.rs  config.rs.bak  decoder.rs  main.rs  main.rs.bak  mqtt.rs  mqtt.rs.bak  mqtt.rs.bak1  rtd.rs  schema.rs  web.rs
src/rtd/: codec.rs  mapper.rs  packet.rs  state.rs
static/: styles.css
